[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "valiant-dkm"
version = "1.0.0"
authors = [{name="Boobookittyfuck"}]
description = "Valiant DKM Core — Parallel Grok twin aligned by VIPolon entanglement."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["ecdsa>=0.18.0"]
